<resources>
    <string name="app_name" translatable="false">Popular Movies</string>
    <string name="default_language" translatable="false">en-US</string>

    <string name="api_state_rumored" translatable="false">Rumored</string>
    <string name="api_state_planned" translatable="false">Planned</string>
    <string name="api_state_inproduction" translatable="false">In Production</string>
    <string name="api_state_postproduction" translatable="false">Post Production</string>
    <string name="api_state_released" translatable="false">Released</string>
    <string name="api_state_canceled" translatable="false">Canceled</string>
    <string name="api_videotype_trailer" translatable="false">Trailer</string>
    <string name="api_videotype_teaser" translatable="false">Teaser</string>
    <string name="api_videotype_clip" translatable="false">Clip</string>
    <string name="api_videotype_featurette" translatable="false">Featurette</string>

    <!-- menu_main.xml -->
    <string name="menu_sort_title">Sort</string>
    <string name="menu_sort_by_popular">Popular</string>
    <string name="menu_sort_by_toprated">Top rated</string>
    <string name="menu_sort_by_favorites">Favorites</string>
    <string name="menu_about_title">About</string>

    <!-- menu_detailed.xml -->
    <string name="menu_favorite">Mark as favorite</string>
    <string name="menu_unfavorite">Unmark as favorite</string>
    <string name="menu_share">Share</string>

    <!-- activity_detail.xml -->
    <string name="rating">%1$.1f / 10</string>
    <string name="error">Could not load data.\nCheck for Internet connection and try again.\nYou can still access your favorite movies.</string>
    <string name="poster_content_description">Movie poster</string>
    <string name="video_content_description">Movie trailer</string>
    <string name="erroricon_content_description">Error icon</string>
    <string name="no_overview_available">There\'s no movie overview available for your language.</string>
    <string name="state_rumored">Rumored</string>
    <string name="state_planned">Planned</string>
    <string name="state_inproduction">In Production</string>
    <string name="state_postproduction">Post Production</string>
    <string name="state_canceled">Canceled</string>
    <string name="marked_as_favorite">Marked as favorite!</string>
    <string name="unmarked_as_favorite">Movie removed from favorites</string>
    <string name="see_videos">See trailers</string>
    <string name="see_reviews">See reviews</string>
    <string name="share_movie">Share this movie</string>

    <!-- activity_videos.xml -->
    <string name="no_videos_found">There\'s no video available for this movie.</string>
    <string name="no_reviews_found">There\'s no review available for this movie.</string>

    <!-- activity_about.xml -->
    <string name="about_author">Created by Piotr Skiba</string>
    <string name="about_webpage" translatable="false">http://piotrskiba.pl/</string>
    <string name="about_udacity_contribution">This project has been created for Udacity Google Developer Nanodegree.</string>
    <string name="about_tmdb_contribution">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="about_tmdb_image_content_description">TMDb contribution</string>

</resources>
