<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:title="@string/menu_sort_title"
        android:icon="@drawable/ic_sort_white_24dp">
        <menu>
            <item
                android:id="@+id/action_sort_by_popular"
                android:orderInCategory="1"
                android:title="@string/menu_sort_by_popular"/>
            <item
                android:id="@+id/action_sort_by_toprated"
                android:orderInCategory="2"
                android:title="@string/menu_sort_by_toprated"/>
            <item
                android:id="@+id/action_sort_by_favorites"
                android:orderInCategory="3"
                android:title="@string/menu_sort_by_favorites"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:title="@string/menu_about_title"
        android:icon="@drawable/ic_info_outline_white_24dp">
    </item>
</menu>