<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:title="@string/menu_favorite"
        android:icon="@drawable/ic_favorite_border_white_24dp">
    </item>
    <item
        android:id="@+id/action_unfavorite"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:title="@string/menu_unfavorite"
        android:icon="@drawable/ic_favorite_white_24dp">
    </item>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        android:title="@string/menu_share"
        android:icon="@drawable/ic_share_white_24dp">
    </item>
</menu>